tests/type-errors/types/function_typedef_local.cx
typedef int callback_t(int x);

int main() {
    callback_t callback;
    return 0;
}
